--- a/src/templates/MainHero/MainHero.scss
+++ b/src/templates/MainHero/MainHero.scss
@@ -54,3 +54,9 @@
 #categories {
     margin-bottom: 21px;
 }
+
+@media screen and (max-width: 700px) {
+    #mainText h3{
+        font-size: 22px;
+    }
+}
