Contact additional text

--- a/src/templates/News/NewsPost.scss
+++ b/src/templates/News/NewsPost.scss
@@ -31,6 +31,9 @@ $designNews: #ef3d9e;
     &:hover {
         box-shadow: 1px 1px 6px 4px rgba(0, 0, 0, 0.2);;
     }
+    img {
+        max-height: 204px;
+    }
 }
 
 .blocks-gallery-item img {
