--- a/src/templates/Contact/Contact.scss
+++ b/src/templates/Contact/Contact.scss
@@ -1,14 +1,21 @@
 #contact {
     height: 100vh;
     width:100%;
-    display: table;
+    display: flex;
     background: url("bg.png");
     background-size: cover;
     text-align: center;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
 }
-#contactWidget {
-    display: table-cell;
-    vertical-align: middle;
+#contactMeMessage {
+    font-family: 'Franklin Gothic Demi';
+    background: linear-gradient(to top, #29164c, #680d70);
+    padding: 13px;
+    border-radius: 5px;
+    color: #fff;
+    box-shadow: 1px 1px 4px 1px rgba(0,0,0,.4);
 }
 .linkContact {
     position: relative;
