Added publication to Play Market to news category

--- a/src/templates/News/NewsPost.scss
+++ b/src/templates/News/NewsPost.scss
@@ -31,7 +31,7 @@ $designNews: #ef3d9e;
     &:hover {
         box-shadow: 1px 1px 6px 4px rgba(0, 0, 0, 0.2);;
     }
-    img {
+    img, video {
         max-height: 204px;
     }
 }
