--- a/src/pages/colormixer-landing.scss
+++ b/src/pages/colormixer-landing.scss
@@ -91,3 +91,16 @@ a img {
     margin-top: 40px;
     text-align: center;
 }
+
+#main-highlighted {
+    background: rgba(#fff, .8);
+    backdrop-filter: blur(5px); 
+    p {
+        color: black;
+        font-size: 14px;
+        
+        &:after, &:before {
+            display: none;
+        }
+    }
+}
