Setup english as the main language for not supported ones

--- a/src/pages/colormixer-landing.scss
+++ b/src/pages/colormixer-landing.scss
@@ -1,6 +1,6 @@
 body {
     background: #1b031a;
-    background-image: urçl("../../static/color_mixer/background-landing.png");
+    background-image: url("../../static/color_mixer/background-landing.png");
     background-position: top center;
 }
 
