Fixed global styles problem

--- a/src/templates/MainHero/MainHero.scss
+++ b/src/templates/MainHero/MainHero.scss
@@ -1,6 +1,6 @@
 #main-hero {
     height: 100vh;
-    background: url("apple-device-blur-blurry-273222.jpg");
+    background: url("./apple-device-blur-blurry-273222.jpg");
     background-size: cover;
     position: relative;
 }
