--- a/src/pages/colormixerlanding.module.scss
+++ b/src/pages/colormixerlanding.module.scss
@@ -1,10 +1,10 @@
-body {
+.landing_body {
     background: #1b031a;
     background-image: url("../../static/color_mixer/background-landing.png");
     background-position: top center;
 }
 
-p {
+.description {
     color: #fff;
     font-size: 36px;
     max-width: 456px;
@@ -40,7 +40,7 @@ p {
     margin: 0 auto;
 }
 
-a img {
+.get_it_on_google {
     max-height: 60px;
     margin-left: 48px;
 }
@@ -106,7 +106,7 @@ a img {
 }
 
 @media screen and (max-width: 480px) {
-    body {
+    .landing_body {
         background-image: url("../../static/color_mixer/background-mobile.jpg");
         background-size: auto auto;
         background-repeat: no-repeat;
@@ -114,7 +114,7 @@ a img {
     #colormixer-logo {
         height: 90px;
     }
-    p {
+    .description {
         margin-top: 516px;
         font-size: 16px;
         margin-left: 0;
@@ -135,7 +135,7 @@ a img {
             left: 10px;
         }
     }
-    a img { 
+    .get_it_on_google { 
         margin-left: 16px;
     }
     #screenshot-colormixer {
