Base spacechains landing

--- a/src/pages/colormixerlanding.module.scss
+++ b/src/pages/colormixerlanding.module.scss
@@ -2,6 +2,7 @@
     background: #1b031a;
     background-image: url("../../static/color_mixer/background-landing.png");
     background-position: top center;
+    overflow: hidden;
 }
 
 .description {
